--- a/product-service/package.json
+++ b/product-service/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Product Service for AWS-EPAM App",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "test"
   },
   "repository": {
     "type": "git",
@@ -21,21 +21,5 @@
   "bugs": {
     "url": "https://github.com/slubimav/aws-back/issues"
   },
-  "homepage": "https://github.com/slubimav/aws-back#readme",
-  "jest": {
-    "testEnvironment": "node",
-    "transformIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/node": "^7.18.6",
-    "@babel/plugin-syntax-import-assertions": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "jest": "^28.1.3",
-    "serverless-webpack": "^5.7.1",
-    "webpack": "^5.73.0"
-  }
+  "homepage": "https://github.com/slubimav/aws-back#readme"
 }
