--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -1,4 +1,4 @@
-service: product-service
+service: product-service-without-webpack
 frameworkVersion: '3'
 configValidationMode: warn
 
@@ -13,7 +13,7 @@ provider:
 
 package:
   individually: true
-  
+
 functions:
   getProductsList:
     handler: lambdas/getProductsList.handler
