--- a/product-service/package.json
+++ b/product-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "test"
+    "test": "mocha 'lambdas/*.test.js' "
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/slubimav/aws-back/issues"
   },
-  "homepage": "https://github.com/slubimav/aws-back#readme"
+  "homepage": "https://github.com/slubimav/aws-back#readme",
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0"
+  }
 }
