--- a/import-service/package.json
+++ b/import-service/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Import-service for AWS EPAM Course 2022",
   "main": "handler.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
