feat: add test for importProductsFile lambda

--- a/import-service/package.json
+++ b/import-service/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.137.0",
     "@aws-sdk/s3-request-presigner": "^3.137.0"
+  },
+  "devDependencies": {
+    "aws-sdk-mock": "^5.7.0"
   }
 }
