--- a/import-service/package.json
+++ b/import-service/package.json
@@ -5,7 +5,7 @@
   "main": "handler.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "mocha 'lambdas/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "@aws-sdk/s3-request-presigner": "^3.137.0"
   },
   "devDependencies": {
-    "aws-sdk-mock": "^5.7.0"
+    "aws-sdk-mock": "^5.7.0",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0"
   }
 }
