--- a/product-service/package.json
+++ b/product-service/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/slubimav/aws-back#readme",
   "devDependencies": {
+    "aws-sdk": "^2.1193.0",
+    "aws-sdk-mock": "^5.7.0",
     "chai": "^4.3.6",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.1189.0",
     "dotenv": "^16.0.1",
     "pg": "^8.7.3"
   }
